[gd_scene load_steps=9 format=3 uid="uid://diphvjv2e84un"]

[ext_resource type="Script" uid="uid://s10j0pm4j6m7" path="res://src/scenes/game/monster.gd" id="1_ec2pw"]
[ext_resource type="Script" uid="uid://chsyljgrm8kf0" path="res://src/scenes/widget/button.gd" id="2_2s8lk"]
[ext_resource type="PackedScene" uid="uid://bx2d4keg6x7ho" path="res://src/scenes/game/color_bar.tscn" id="2_ed4tn"]
[ext_resource type="Script" uid="uid://bpcfk56u3agxt" path="res://src/scenes/game/damage_group.gd" id="3_6eeb1"]
[ext_resource type="Script" uid="uid://cgg153p8wa2cr" path="res://src/scenes/game/poison_damage_group.gd" id="5_q52xv"]
[ext_resource type="Script" uid="uid://ctsj20lbvsrfc" path="res://src/scenes/game/skill_name_group.gd" id="5_vhnye"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6omt5"]
bg_color = Color(0.643137, 0.403922, 0.396078, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p6afn"]
bg_color = Color(0.176471, 0.176471, 0.176471, 1)

[node name="Monster" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 65.0
offset_top = 56.0
offset_right = 65.0
offset_bottom = 56.0
script = ExtResource("1_ec2pw")

[node name="Back" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -25.0
offset_top = -20.0
offset_right = 25.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_6omt5")
script = ExtResource("2_2s8lk")

[node name="HpBar" type="Panel" parent="Back"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -23.0
offset_top = 2.0
offset_right = 23.0
offset_bottom = 7.0
grow_horizontal = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_p6afn")

[node name="ColorBar" parent="Back/HpBar" instance=ExtResource("2_ed4tn")]
layout_mode = 0
offset_right = 25.0
mouse_filter = 2
max_width = 46

[node name="Name" type="Label" parent="Back"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 40.0
offset_right = 100.0
offset_bottom = 63.0
grow_horizontal = 2
text = "绿蜗牛"
horizontal_alignment = 1

[node name="DamageGroup" type="Control" parent="."]
anchors_preset = 0
offset_left = -2.0
offset_top = -31.0
offset_right = 2.0
offset_bottom = -27.0
script = ExtResource("3_6eeb1")

[node name="PoisonDamageGroup" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -2.0
offset_top = -31.0
offset_right = 2.0
offset_bottom = -27.0
script = ExtResource("5_q52xv")

[node name="SkillNameGroup" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 2.0
offset_top = -1.0
offset_right = 6.0
offset_bottom = 3.0
script = ExtResource("5_vhnye")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="DeepDamageLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = -21.0
offset_top = -6.0
offset_right = -9.0
offset_bottom = 11.0
theme_override_colors/font_color = Color(0.87451, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 12
text = "裂"

[connection signal="my_released" from="Back" to="." method="_on_panel_my_released"]
